data/derived/comb/progs/unify/prog7401.ml.out
Characters 166-168:
  | _  -> (a1 :: 3, a2 :: 5)
           ^^
Error: This expression has type int list
       but an expression was expected of type int
